--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+server.port=9090
 spring.datasource.username=postgres
 spring.datasource.password=root
 
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=update
